--- a/.github/workflows/grading.yml
+++ b/.github/workflows/grading.yml
@@ -30,3 +30,6 @@ jobs:
       - name: Build
         run: "./${{ env.PROBLEM }}-grading-tests/scripts/check_build.sh"
         timeout-minutes: 1
+      - name: Test
+        run: "./${{ env.PROBLEM }}-grading-tests/scripts/test.sh"
+        timeout-minutes: 1
